# DevGames

./: .gitignore  CMakeLists.txt  INSTALLER_README.txt  LICENSE.rtf  README.md  deps.sh  renovate.json
.github/: release.json
.github/workflows/: build.yml  release.yml
docs/: Doxyfile.in
include/: devgames.h
src/: main.cpp
src/builtin/: README.md
src/builtin/pong/: main.cpp  pong.properties
src/builtin/snake/: snake.properties
src/builtin/square-adventure/: main.cpp  square-adventure.properties
src/main/: main.cpp
